Use ProcessBuilder instead of Runtime#exec() for RocketRP execution